# swave

./: README.md  pyproject.toml
src/swave/: app.py  swave_app.py
src/swave/assets/: swave.css
src/swave/audio/: audio_engine.py  audio_loopback.py
