[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swave"
version = "0.1.0"
description = "A terminal audio visualizer for Windows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual",
    "pyaudiowpatch",
    "numpy",
]

[project.scripts]
swave = "swave.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swave"]